# cmake_traning

Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cpp  tutorial.h
Step1_build/: 19092024.sln  19092024.vcxproj  19092024.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Step1_build/19092024.dir/Debug/: 19092024.exe.recipe  19092024.ilk
Step1_build/19092024.dir/Debug/19092024.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Step1_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
Step1_build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
Step1_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Step1_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
